# secrt-rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  bench.sh
.github/workflows/: release.yml
.taskmaster/tasks/: tasks.json
docs/: cli-testing-2026-02-09.md  test-coverage.md
src/: burn.rs  claim.rs  cli.rs  client.rs  color.rs  completion.rs  config.rs  create.rs  fileutil.rs  gen.rs  keychain.rs  lib.rs  main.rs  mime.rs  passphrase.rs
src/envelope/: crypto.rs  url.rs
tests/: cli_burn.rs  cli_claim.rs  cli_create.rs  cli_dispatch.rs  cli_gen.rs  cli_get.rs  cli_send.rs  e2e.rs  envelope_vectors.rs  helpers.rs  ttl_vectors.rs
